java_binary(
    name="gapic",
    main_class="com.google.gapid.Main",
    visibility = ["//visibility:public"],
    runtime_deps=[
        "//gapic/src/main",
        "//gapic/res:res",
    ],
    jvm_flags = select({
        "//tools/build:darwin": ["-XstartOnFirstThread"],
        "//tools/build:linux": ["-DSWT_GTK3=0", "-DLIBOVERLAY_SCROLLBAR=0"],
        "//conditions:default": [],
    }),
)
