# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

java_binary(
    name = "gapic",
    jvm_flags = select({
        "//tools/build:darwin": ["-XstartOnFirstThread"],
        "//tools/build:darwin_arm64": ["-XstartOnFirstThread"],
        "//tools/build:linux": [
            "-DSWT_GTK3=0",
            "-DLIBOVERLAY_SCROLLBAR=0",
        ],
        "//conditions:default": [],
    }),
    main_class = "com.google.gapid.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//gapic/res",
        "//gapic/src/main",
    ],
)
