# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "deviceinfo.go",
        "doc.go",
        "gapidapk.go",
        "packageinfo.go",
    ],
    importpath = "github.com/google/gapid/gapidapk",
    visibility = ["//visibility:public"],
    deps = [
        "//core/app:go_default_library",
        "//core/app/crash:go_default_library",
        "//core/app/layout:go_default_library",
        "//core/event/task:go_default_library",
        "//core/log:go_default_library",
        "//core/os/android:go_default_library",
        "//core/os/android/adb:go_default_library",
        "//core/os/android/apk:go_default_library",
        "//core/os/device:go_default_library",
        "//core/os/device/bind:go_default_library",
        "//core/os/flock:go_default_library",
        "//gapidapk/pkginfo:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
