# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "binary.go",
        "encoders.go",
        "format.go",
        "main.go",
        "resolve.go",
        "template.go",
        "validate.go",
    ],
    importpath = "github.com/google/gapid/cmd/apic",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/log:go_default_library",
        "//core/os/file:go_default_library",
        "//gapil:go_default_library",
        "//gapil/ast:go_default_library",
        "//gapil/bapi:go_default_library",
        "//gapil/encoder:go_default_library",
        "//gapil/format:go_default_library",
        "//gapil/parser:go_default_library",
        "//gapil/resolver:go_default_library",
        "//gapil/semantic:go_default_library",
        "//gapil/template:go_default_library",
        "//gapil/validate:go_default_library",
    ],
)

go_binary(
    name = "apic",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
