load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/clean_generated",
    visibility = ["//visibility:private"],
    deps = ["//core/app:go_default_library"],
)

go_binary(
    name = "clean_generated",
    importpath = "github.com/google/gapid/cmd/clean_generated",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
