load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/copyright",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/log:go_default_library",
        "//core/text/copyright:go_default_library",
    ],
)

go_binary(
    name = "copyright",
    embed = [":go_default_library"],
    importpath = "github.com/google/gapid/cmd/copyright",
    visibility = ["//visibility:public"],
)
