load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/embed",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/log:go_default_library",
        "@org_golang_x_tools//imports:go_default_library",
    ],
)

go_binary(
    name = "embed",
    importpath = "github.com/google/gapid/cmd/embed",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
