# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//tools/build:rules.bzl", "apic_template", "go_stripped_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

apic_template(
    name = "vulkan_lookup",
    api = "//gapis/api/vulkan:api",
    templates = [
        "//gapis/api/templates:enum_lookup.go",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "lookup.go",
        "main.go",
    ],
    embed = [
        ":vulkan_lookup",  # keep
    ],
    importpath = "github.com/google/gapid/cmd/enum_lookup",
    visibility = ["//visibility:public"],
    deps = ["//core/app:go_default_library"],
)

go_stripped_binary(
    name = "enum_lookup",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
