load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/font-gen",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "font-gen",
    importpath = "github.com/google/gapid/cmd/font-gen",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
