load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "console_other.go",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "console_windows.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/google/gapid/cmd/gapid",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gapid",
    embed = [":go_default_library"],
    importpath = "github.com/google/gapid/cmd/gapid",
    visibility = ["//visibility:public"],
)
