load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/gapis",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/app/auth:go_default_library",
        "//core/event/task:go_default_library",
        "//core/log:go_default_library",
        "//core/os/android/adb:go_default_library",
        "//core/os/device/bind:go_default_library",
        "//core/os/device/host:go_default_library",
        "//core/os/file:go_default_library",
        "//core/text:go_default_library",
        "//gapir/client:go_default_library",
        "//gapis/database:go_default_library",
        "//gapis/replay:go_default_library",
        "//gapis/server:go_default_library",
        "//gapis/service:go_default_library",
        "//gapis/stringtable:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
    ],
)

go_binary(
    name = "gapis",
    importpath = "github.com/google/gapid/cmd/gapis",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
