load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/linearize_trace",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/log:go_default_library",
        "//gapis/api/gles:go_default_library",
        "//gapis/api/gvr:go_default_library",
        "//gapis/api/vulkan:go_default_library",
        "//gapis/capture:go_default_library",
        "//gapis/database:go_default_library",
        "//gapis/resolve/initialcmds:go_default_library",
    ],
)

go_binary(
    name = "linearize_trace",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
