load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/llvm-build",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "llvm-build",
    embed = [":go_default_library"],
    importpath = "github.com/google/gapid/cmd/llvm-build",
    visibility = ["//visibility:public"],
)
