load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/gapid/cmd/make-debuggable",
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/log:go_default_library",
        "//core/os/android/apk:go_default_library",
        "//core/os/file:go_default_library",
    ],
)

go_binary(
    name = "make-debuggable",
    importpath = "github.com/google/gapid/cmd/make-debuggable",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
