load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bench.go",
        "cat.go",
        "indices.go",
        "list.go",
        "main.go",
        "misc.go",
        "perfz.go",
        "plot.go",
        "pprof.go",
        "redo.go",
        "rm.go",
        "run.go",
        "samples.go",
        "summary.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//core/app:go_default_library",
        "//core/app/benchmark:go_default_library",
        "//core/data/id:go_default_library",
        "//core/event/task:go_default_library",
        "//core/image:go_default_library",
        "//core/log:go_default_library",
        "//core/os/shell:go_default_library",
        "//gapis/api:go_default_library",
        "//gapis/client:go_default_library",
        "//gapis/service:go_default_library",
        "//gapis/service/path:go_default_library",
        "//gapis/stringtable:go_default_library",
    ],
)

go_binary(
    name = "perf",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["samples_test.go"],
    library = ":go_default_library",
    tags = [
        "manual",  # TODO: Needs access to a working gl driver
    ],
    deps = ["//core/assert:go_default_library"],
)
